--- a/views/result.ejs
+++ b/views/result.ejs
@@ -81,95 +81,6 @@
     <a href="/" class="back-button">&#8592; Back</a>
   </div>
 
-  <script>
-    // Price toggle functionality
-    const showPricesCheckbox = document.getElementById('showPrices');
-    const priceElements = document.querySelectorAll('.price-info');
-    const priceTotals = document.querySelector('.price-totals');
-  
-    showPricesCheckbox.addEventListener('change', function() {
-      const showPrices = this.checked;
-      
-      priceElements.forEach(el => {
-        el.classList.toggle('hidden', !showPrices);
-      });
-      
-      if (priceTotals) {
-        priceTotals.classList.toggle('hidden', !showPrices);
-      }
-  
-      fetch('/set-preferences', {
-        method: 'POST',
-        headers: {
-          'Content-Type': 'application/json'
-        },
-        body: JSON.stringify({ showPrices })
-      });
-    });
-  
-    // Copy functionality
-    document.getElementById('copyButton').addEventListener('click', function() {
-      const showPrices = document.getElementById('showPrices').checked;
-      let outputText = '';
-      
-      if (showPrices) {
-        outputText += 'Price Summary:\n';
-        <% data.categories.forEach(function(category) { %>
-          <% if (category.categoryTotal > 0) { %>
-            outputText += '<%= category.name %>: $<%= category.categoryTotal %>\n';
-          <% } %>
-        <% }); %>
-        outputText += 'Total Deck Value: $<%= grandTotal %>\n\n';
-      }
-      
-      <% data.categories.forEach(function(category) { %>
-        <% if (category.name.trim() !== 'Uncategorized') { %>
-          outputText += '<%= category.name %>\n';
-        <% } %>
-        <% category.cards.forEach(function(card) { %>
-          outputText += '<%= card.count %>x <%= card.name %> - <%= card.type_line %>\n';
-          outputText += '  Mana Cost: <%= card.mana_cost %>\n';
-          outputText += '  Description: <%= card.description.replace(/\n/g, " ").replace(/'/g, "\\'") %>\n';
-          if (showPrices) {
-            outputText += '  Price (Nonfoil USD): <%= card.usd %>\n';
-          }
-          outputText += '\n';
-        <% }); %>
-      <% }); %>
-  
-      navigator.clipboard.writeText(outputText)
-        .then(() => alert('Output copied to clipboard!'))
-        .catch(err => {
-          console.error('Could not copy text: ', err);
-          alert('Error copying the output.');
-        });
-    });
-  
-    // Cache clear functionality
-    document.getElementById('clearCacheButton').addEventListener('click', function() {
-      if (confirm('Are you sure you want to clear the cache? This action cannot be undone.')) {
-        fetch('/clear-cache', {
-          method: 'POST',
-          headers: {
-            'Content-Type': 'application/json'
-          },
-          body: JSON.stringify({ confirm: true })
-        })
-        .then(response => response.json())
-        .then(data => {
-          if (data.success) {
-            alert('Cache has been successfully cleared.');
-            window.location.reload();
-          } else {
-            alert('Failed to clear cache.');
-          }
-        })
-        .catch(error => {
-          console.error('Error clearing cache:', error);
-          alert('An error occurred while clearing the cache.');
-        });
-      }
-    });
-  </script>
+  <script src="/script.js"></script>
 </body>
 </html>
